# trie-semantic-search

./: Cargo.toml  README.md
examples/: ingestion_demo.rs  simple_demo.rs
src/: api.rs  config.rs  errors.rs  lib.rs  main.rs  search.rs  storage.rs  text_processing.rs  trie.rs  utils.rs  vector.rs
src/ingestion/: cache.rs  mod.rs  pipeline.rs  validation.rs
src/ingestion/sources/: cap.rs  mod.rs
