[package]
name = "trie-semantic-search"
version = "0.1.0"
edition = "2021"
authors = ["Legal Search Team"]
description = "High-performance trie-structured legal search engine with semantic capabilities"
license = "MIT"
repository = "https://github.com/legal-search/trie-semantic-search"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Web framework
actix-web = "4.4"
actix-cors = "0.6"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# HTTP client for data ingestion
reqwest = { version = "0.11", features = ["json", "stream"] }

# Text processing and tokenization
regex = "1.10"
unicode-normalization = "0.1"
# tokenizers = "0.15"  # Commented out for now

# Trie and indexing
fst = "0.4"

# Machine learning and embeddings
# onnxruntime = "0.0.14"  # Commented out - macOS ARM64 issues

# Vector search
# hnsw_rs = "0.2"  # Commented out for now

# Database and storage
sled = "0.34"
flate2 = "1.0"

# Utilities
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
tempfile = "3.8"

# Performance and concurrency
rayon = "1.8"
dashmap = "5.5"
parking_lot = "0.12"

# Configuration
config = "0.13"
toml = "0.8"
num_cpus = "1.16"

[dev-dependencies]
criterion = "0.5"
wiremock = "0.5"

[[bin]]
name = "legal-search-server"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
debug = true 